# ros2_uwb_plugin

./: .gitignore  404.html  COMMANDS.md  LICENSE  README.md  RESEARCH_WORKFLOW.md  index.html  install_dependencies.sh  sitemap.xml
.github/workflows/: ros2_ci.yml
assets/css/: styles.6a61aba6.css
assets/js/: 0e384e19.db241558.js  17896441.4ea0b212.js  3b8c55ea.d9139380.js  42.719f3a84.js  462b84f2.e9c982c2.js  47577548.16afc137.js  5281b7a2.741a4cda.js  5e95c892.cac8d69d.js  72e14192.7f5f4530.js  79252460.14fc433f.js  9d6b9bdb.b4ebfe77.js  9d9f8394.639a99c1.js  a7456010.8ddede4c.js  a7bd4aaa.3bf12720.js  a94703ab.70fdc709.js  aba21aa0.af633d56.js  afa4a74b.d71b5606.js  b9f051bf.9962ff10.js  c4f5d8e4.a638275c.js  main.8f3c8b4b.js  runtime~main.2986117b.js
docs/architecture/: index.html
docs/benchmarking/: index.html
docs/installation/: index.html
docs/intro/: index.html
docs/noise-models/: index.html
docs/quick-start/: index.html
docs/real-hardware/: index.html
docs/research-workflow/: index.html
docs/topics/: index.html
docs/troubleshooting/: index.html
ros2_uwb_drivers/: package.xml  setup.cfg  setup.py
ros2_uwb_drivers/config/: uwb_driver.yaml
ros2_uwb_drivers/launch/: uwb_driver.launch.py
ros2_uwb_drivers/ros2_uwb_drivers/: uwb_serial_driver_node.py
ros2_uwb_localization/: CMakeLists.txt  README.md  fix_lint.diff  package.xml  test_cov
ros2_uwb_localization/config/: anchors.yaml  ekf.yaml  localizer.yaml  trilateration.yaml  visualization.yaml
ros2_uwb_localization/config/params/: indoor_small.yaml  warehouse_large.yaml
ros2_uwb_localization/docs/: ARCHITECTURE.md  RELEASE_CHECKLIST.md
ros2_uwb_localization/include/ros2_uwb_localization/: anchor_manager_node.hpp  range_preprocessor.hpp  trilateration_solver.hpp  uwb_visualization_node.hpp
ros2_uwb_localization/launch/: demo.launch.py  demo_bag.launch.py  localization.launch.py  play_bag.launch.py  record_bag.launch.py  record_dataset.launch.py
ros2_uwb_localization/rviz/: uwb_localization.rviz
ros2_uwb_localization/scripts/: generate_demo_bag.py  plot_diagnostics.py  plot_results.py
ros2_uwb_localization/src/: anchor_manager_node.cpp  uwb_benchmark_node.cpp  uwb_range_preprocessor.cpp  uwb_trilateration_solver.cpp  uwb_visualization_node.cpp  uwb_yaw_estimator.cpp
ros2_uwb_localization/test/: test_anchor_manager.cpp  test_covariance.cpp  test_trilateration.cpp  test_yaw_estimator.cpp
ros2_uwb_localization/worlds/: uwb_demo.sdf
ros2_uwb_msgs/: CMakeLists.txt  package.xml
ros2_uwb_msgs/msg/: UWBErrorDiagnostics.msg  UWBMultiRange.msg  UWBRange.msg
ros2_uwb_research_sim/: CMakeLists.txt  README.md  package.xml
ros2_uwb_research_sim/config/: params.yaml
ros2_uwb_research_sim/examples/: README.md  basic_sim.launch.py  example_world.sdf  headless_sim.launch.py
ros2_uwb_research_sim/experiments/: full_mode.yaml  gaussian.yaml  nlos.yaml
ros2_uwb_research_sim/include/ros2_uwb_research_sim/: channel_model.hpp  clock_drift_model.hpp  gaussian_noise_model.hpp  multipath_model.hpp  nlos_bias_model.hpp  physics_model.hpp  uwb_plugin.hpp
ros2_uwb_research_sim/launch/: demo.launch.py  sim.launch.py
ros2_uwb_research_sim/msg/: UWBResearchData.msg
ros2_uwb_research_sim/scripts/: benchmark.py  plotter.py  position_accuracy_benchmark.py  research_autopilot.py  researcher_node.py  runner.py
ros2_uwb_research_sim/src/: channel_model.cpp  clock_drift_model.cpp  gaussian_noise_model.cpp  multipath_model.cpp  nlos_bias_model.cpp  physics_model.cpp  uwb_plugin.cpp
ros2_uwb_research_sim/test/: test_channel_edge_cases.cpp  test_noise_models.cpp
ros2_uwb_research_sim/urdf/: robot.urdf
