<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_uwb_localization</name>
  <version>1.0.0</version>
  <description>
    Plug-and-play UWB localization for ROS2. Provides anchor management,
    trilateration-based position estimation with NLOS rejection, EKF sensor
    fusion (UWB + odometry + IMU), and RViz visualization. Designed for
    Gazebo/Ignition simulation and real hardware.
  </description>
  <maintainer email="anand@example.com">Anand Bobba</maintainer>
  <license>Apache-2.0</license>
  <url type="repository">https://github.com/anandbobba/ros2_uwb_plugin</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ros2_uwb_msgs</depend>

  <!-- EKF Fusion -->
  <exec_depend>robot_localization</exec_depend>

  <!-- Math -->
  <build_depend>eigen</build_depend>

  <!-- Config loading -->
  <depend>yaml-cpp</depend>

  <!-- Research dependencies -->
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Demo dependencies (optional) -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
