<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_uwb_research_sim</name>
  <version>1.0.0</version>
  <description>Professional UWB sensor simulation plugin for Gazebo (Ignition) with modular error modeling.</description>
  <maintainer email="anand@todo.todo">Anand</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros2_uwb_msgs</depend>
  <depend>eigen</depend>
  <depend>ignition-gazebo6</depend>
  <depend>ignition-common4</depend>
  <depend>ignition-plugin1</depend>
  <depend>ignition-msgs8</depend>
  <depend>ignition-transport11</depend>
  <depend>ros_gz_bridge</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
